--- a/src/WeatherApp.Web/WeatherApp.Web.csproj
+++ b/src/WeatherApp.Web/WeatherApp.Web.csproj
@@ -24,6 +24,10 @@
 
 
 
+  <ItemGroup>
+    <Folder Include="Infrastructure\" />
+  </ItemGroup>
+
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
