--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,56 +1,57 @@
 ﻿<Project>
-    <ItemGroup>
-        <PackageVersion Include="Alba" Version="7.4.1" />
-        <PackageVersion Include="AspNetCore.HealthChecks.Redis" Version="7.0.1" />
-        <PackageVersion Include="AutoFixture.Xunit2" Version="4.18.0" />
-        <PackageVersion Include="Carter" Version="7.2.0" />
-        <PackageVersion Include="Microsoft.AspNetCore.SpaProxy" Version="7.0.5" />
-        <PackageVersion Include="AspNetCore.HealthChecks.UI" Version="6.0.5" />
-        <PackageVersion Include="FluentAssertions" Version="6.12.0" />
-        <PackageVersion Include="FluentValidation.AspNetCore" Version="11.3.0" />
-        <PackageVersion Include="FluentValidation.DependencyInjectionExtensions" Version="11.3.0" />
-        <PackageVersion Include="Meziantou.Analyzer" Version="2.0.93">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageVersion>
-        <PackageVersion Include="Meziantou.Extensions.Logging.Xunit" Version="1.0.6" />
-        <PackageVersion Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.3" />
-        <PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
-        <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
-        <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
-        <PackageVersion Include="Microsoft.Extensions.Options" Version="7.0.1" />
-        <PackageVersion Include="Microsoft.SourceLink.AzureRepos.Git" Version="1.1.1" />
-        <PackageVersion Include="SonarAnalyzer.CSharp" Version="8.48.0.56517">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageVersion>
-        <PackageVersion Include="SpecFlow.xUnit" Version="3.9.74" />
-        <PackageVersion Include="StackExchange.Redis" Version="2.6.122" />
-        <PackageVersion Include="StronglyTypedId" Version="1.0.0-beta06" />
-        <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-        <PackageVersion Include="System.Drawing.Common" Version="7.0.0" />
-        <PackageVersion Include="System.Linq.Async" Version="6.0.1" />
-        <PackageVersion Include="System.Memory" Version="4.5.5" />
-        <PackageVersion Include="System.Text.Json" Version="7.0.3" />
-        <PackageVersion Include="System.Text.RegularExpressions" Version="4.3.1" />
-        <PackageVersion Include="Testcontainers" Version="3.5.0" />
-        <PackageVersion Include="NBench" Version="2.0.1" />
-        <PackageVersion Include="Verify.Xunit" Version="22.1.4" />
-        <PackageVersion Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.1" />
-        <PackageVersion Include="Shouldly" Version="4.2.1" />
-        <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
-        <PackageVersion Include="xunit" Version="2.5.3" />
-        <PackageVersion Include="xunit.runner.visualstudio" Version="2.5.3">
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-            <PrivateAssets>all</PrivateAssets>
-        </PackageVersion>
-        <PackageVersion Include="coverlet.collector" Version="6.0.0">
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-            <PrivateAssets>all</PrivateAssets>
-        </PackageVersion>
-        <PackageVersion Include="coverlet.msbuild" Version="6.0.0">
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-            <PrivateAssets>all</PrivateAssets>
-        </PackageVersion>
-    </ItemGroup>
+  <ItemGroup>
+    <PackageVersion Include="Cocona" Version="2.2.0" />
+    <PackageVersion Include="Discord.Net.Webhook" Version="3.12.0" />
+    <PackageVersion Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+    <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
+    <PackageVersion Include="Alba" Version="7.4.1" />
+    <PackageVersion Include="AspNetCore.HealthChecks.Redis" Version="7.0.1" />
+    <PackageVersion Include="AutoFixture.Xunit2" Version="4.18.0" />
+    <PackageVersion Include="Carter" Version="7.2.0" />
+    <PackageVersion Include="Microsoft.AspNetCore.SpaProxy" Version="7.0.5" />
+    <PackageVersion Include="AspNetCore.HealthChecks.UI" Version="6.0.5" />
+    <PackageVersion Include="FluentAssertions" Version="6.12.0" />
+    <PackageVersion Include="FluentValidation.AspNetCore" Version="11.3.0" />
+    <PackageVersion Include="FluentValidation.DependencyInjectionExtensions" Version="11.3.0" />
+    <PackageVersion Include="Meziantou.Analyzer" Version="2.0.93">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageVersion>
+    <PackageVersion Include="Meziantou.Extensions.Logging.Xunit" Version="1.0.6" />
+    <PackageVersion Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.3" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
+    <PackageVersion Include="Microsoft.Extensions.Options" Version="7.0.1" />
+    <PackageVersion Include="Microsoft.SourceLink.AzureRepos.Git" Version="1.1.1" />
+    <PackageVersion Include="SonarAnalyzer.CSharp" Version="8.48.0.56517">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageVersion>
+    <PackageVersion Include="SpecFlow.xUnit" Version="3.9.74" />
+    <PackageVersion Include="StackExchange.Redis" Version="2.6.122" />
+    <PackageVersion Include="System.Linq.Async" Version="6.0.1" />
+    <PackageVersion Include="System.Memory" Version="4.5.5" />
+    <PackageVersion Include="System.Text.Json" Version="7.0.3" />
+    <PackageVersion Include="System.Text.RegularExpressions" Version="4.3.1" />
+    <PackageVersion Include="Testcontainers" Version="3.5.0" />
+    <PackageVersion Include="NBench" Version="2.0.1" />
+    <PackageVersion Include="Verify.Xunit" Version="22.1.4" />
+    <PackageVersion Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.1" />
+    <PackageVersion Include="Shouldly" Version="4.2.1" />
+    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
+    <PackageVersion Include="xunit" Version="2.5.3" />
+    <PackageVersion Include="xunit.runner.visualstudio" Version="2.5.3">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageVersion>
+    <PackageVersion Include="coverlet.collector" Version="6.0.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageVersion>
+    <PackageVersion Include="coverlet.msbuild" Version="6.0.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageVersion>
+  </ItemGroup>
 </Project>
